--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.3",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@vercel/postgres": "^0.1.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -24,6 +22,7 @@
     "iconv-lite": "^0.6.3",
     "lucide-react": "^0.211.0",
     "next": "^13.4.1",
+    "next-themes": "^0.2.1",
     "pg": "^8.10.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -31,8 +30,7 @@
     "react-wrap-balancer": "^0.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4"
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
