--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@vercel/kv": "^0.2.2",
     "@vercel/postgres": "^0.1.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -18,10 +19,10 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "eslint": "8.39.0",
-    "eslint-config-next": "^13.4.1",
+    "eslint-config-next": "^13.4.12",
     "iconv-lite": "^0.6.3",
     "lucide-react": "^0.211.0",
-    "next": "^13.4.1",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "pg": "^8.10.0",
     "postcss": "8.4.23",
