--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/kv": "^0.2.2",
     "@vercel/postgres": "^0.1.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
