--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "eslint": "8.39.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^14.1.0",
     "iconv-lite": "^0.6.3",
     "lucide-react": "^0.211.0",
-    "next": "^13.4.12",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "pg": "^8.10.0",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^0.4.1",
@@ -34,7 +34,10 @@
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8"
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "typescript": "^5.3.3"
   }
 }
