--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ VERCEL_GIT_PULL_REQUEST_ID=""
 VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
-VERCEL_URL=""
+VERCEL_URL="https://www.google.com"
