--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "crons": [{
-    "path": "/api/cron/revalidate",
-    "schedule": "01 0 * * *"
-  }]
+  "crons": [
+    {
+      "path": "/api/cron/revalidate",
+      "schedule": "01 0 * * *"
+    }
+  ]
 }
